--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-python-netconf-io (1.0.0-1) unstable; urgency=low
+python-litenc (1.0-1) UNRELEASED; urgency=medium
 
   * Initial release.
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Tue, 29 Mar 2016 15:46:46 +0200
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Tue, 04 Apr 2017 15:10:05 +0200
