--- a/tntapi/CHANGELOG
+++ b/tntapi/CHANGELOG
@@ -1,3 +1,9 @@
+python-tntapi (1.2) UNRELEASED; urgency=medium
+
+  *
+
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 17 Aug 2018 01:28:05 +0200
+
 python-tntapi (1.1) stable; urgency=medium
 
   * Initial release.
