--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
-python-litenc (1.2) UNRELEASED; urgency=medium
+python-litenc (1.2) stable; urgency=medium
 
-  * 
+  * Added yangrpc support in tntapi
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Thu, 16 Aug 2018 17:15:45 +0200
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 17 Aug 2018 04:09:47 +0200
 
 python-litenc (1.1) stable; urgency=medium
 
