--- a/tntapi/CHANGELOG
+++ b/tntapi/CHANGELOG
@@ -1,3 +1,9 @@
+python-tntapi (1.3) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 24 Aug 2018 20:09:32 +0200
+
 python-tntapi (1.2) stable; urgency=medium
 
   * Added support for yangrpc when available.
