--- a/tntapi/debian/changelog
+++ b/tntapi/debian/changelog
@@ -1,5 +1,6 @@
-python-tntapi (1.2-0) stable; urgency=medium
+python-tntapi (1.3-0) UNRELEASED; urgency=medium
 
-  * Unofficial release
+  * UNRELEASED
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 17 Aug 2018 01:28:41 +0200
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 24 Aug 2018 20:08:27 +0200
+
