--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-litenc (1.3) stable; urgency=medium
+
+  * Removed default namespace stripping in litenc_lxml
+
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 31 Aug 2018 16:25:51 +0200
+
 python-litenc (1.2) stable; urgency=medium
 
   * Added yangrpc support in tntapi
