--- a/tntapi/CHANGELOG
+++ b/tntapi/CHANGELOG
@@ -1,3 +1,9 @@
+python-tntapi (1.4) stable; urgency=medium
+
+  * Fixed bug in set-net not converting the namespace of netconf-node:config to nc:config resulting in server rejecting the copy-config request.
+
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Sun, 02 Sep 2018 22:06:26 +0200
+
 python-tntapi (1.3) stable; urgency=medium
 
   * Removed default XML namespace stripping of returned data
