--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-python-litenc (1.3-0) stable; urgency=medium
+python-litenc (1.4-0) UNRELEASED; urgency=medium
 
-  * Unofficial release
+  * Unofficial release 
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 31 Aug 2018 16:27:29 +0200
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 14 Sep 2018 10:35:00 +0200
+
