--- a/tntapi/CHANGELOG
+++ b/tntapi/CHANGELOG
@@ -1,3 +1,9 @@
+python-tntapi (1.5) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 14 Sep 2018 10:35:00 +0200
+
 python-tntapi (1.4) stable; urgency=medium
 
   * Fixed bug in set-net not converting the namespace of netconf-node:config to nc:config resulting in server rejecting the copy-config request.
