--- a/tntapi/CHANGELOG
+++ b/tntapi/CHANGELOG
@@ -1,8 +1,9 @@
-python-tntapi (1.5) UNRELEASED; urgency=medium
+python-tntapi (1.5) stable; urgency=medium
 
-  * 
+  * Added netconf-node:netconf-get-filter specifying per node <get> filters
+  * Added example/traffic-graphic command line tool for plotting traffic indicator on SVG background
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 14 Sep 2018 10:35:00 +0200
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Sat, 22 Sep 2018 21:58:41 +0200
 
 python-tntapi (1.4) stable; urgency=medium
 
