--- a/tntapi/debian/changelog
+++ b/tntapi/debian/changelog
@@ -1,6 +1,5 @@
-python-tntapi (1.5-0) UNRELEASED; urgency=medium
+python-tntapi (1.5-0) stable; urgency=medium
 
   * Unofficial release
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 14 Sep 2018 10:35:00 +0200
-
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Sat, 22 Sep 2018 22:02:03 +0200
