--- a/tntapi/CHANGELOG
+++ b/tntapi/CHANGELOG
@@ -1,8 +1,9 @@
 python-tntapi (1.6) UNRELEASED; urgency=medium
 
   * Added flow visualization to traffic-graphic
+  * Added tntapi.yangcli function and usage example
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Thu, 18 Oct 2018 12:10:36 +0200
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Thu, 08 Nov 2018 14:08:59 +0100
 
 python-tntapi (1.5) stable; urgency=medium
 
