--- a/tntapi/debian/changelog
+++ b/tntapi/debian/changelog
@@ -2,4 +2,4 @@ python-tntapi (1.6-0) UNRELEASED; urgency=medium
 
   * Unofficial release
 
- -- Vladimir Vassilev <vladimir@lmf>  Thu, 18 Oct 2018 12:11:17 +0200
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Thu, 08 Nov 2018 14:13:34 +0100
