--- a/tntapi/CHANGELOG
+++ b/tntapi/CHANGELOG
@@ -2,8 +2,10 @@ python-tntapi (1.6) UNRELEASED; urgency=medium
 
   * Added flow visualization to traffic-graphic
   * Added tntapi.yangcli function and usage example
+  * Added get_datetime_delta returning elapsed period in float seconds
+    based on /system-state/clock/current-datetime
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Thu, 08 Nov 2018 14:08:59 +0100
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Thu, 15 Nov 2018 17:23:49 +0100
 
 python-tntapi (1.5) stable; urgency=medium
 
