--- a/tntapi/debian/install
+++ b/tntapi/debian/install
@@ -1,3 +1,4 @@
 yang/tntapi-netconf-node.yang usr/share/yuma/modules/tntapi
 yang/tntapi-traffic-graphic.yang usr/share/yuma/modules/tntapi
+yang/tntapi-traffic-graphic-flows.yang usr/share/yuma/modules/tntapi
 
