Fixed bug in tntapi-netconf-node.yang contradicting the description statement intent to have <nc:filter> node. Fixed bug in tntapi-traffic-graphic-flows.yang

--- a/tntapi/CHANGELOG
+++ b/tntapi/CHANGELOG
@@ -8,8 +8,10 @@ python-tntapi (1.6) UNRELEASED; urgency=medium
     graphic representation of flows - color for now
   * Implemented flow color specification support in
     examples/traffic-graphic according to tntapi-traffic-graphic-flows.yang
+  * Fixed bug in tntapi-netconf-node.yang contradicting
+    the description statement intent to have <nc:filter> node
 
- -- Vladimir Vassilev <vladimir@transpapcket.com>  Tue, 11 Dec 2018 15:15:36 +0100
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Tue, 11 Dec 2018 17:08:42 +0100
 
 python-tntapi (1.5) stable; urgency=medium
 
