--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
 python-litenc (1.4) UNRELEASED; urgency=medium
 
-  * 
+  * Fixed litenc_lxml 'module' object has no attribute 'strip_namespaces' error
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 14 Sep 2018 10:35:00 +0200
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Wed, 02 Jan 2019 17:47:40 +0100
 
 python-litenc (1.3) stable; urgency=medium
 
