Updated test-network-interconnect-tester.py to use draft-ietf-netmod-intf-ext-yang-08 loopback

--- a/tntapi/CHANGELOG
+++ b/tntapi/CHANGELOG
@@ -10,8 +10,10 @@ python-tntapi (1.6) UNRELEASED; urgency=medium
     examples/traffic-graphic according to tntapi-traffic-graphic-flows.yang
   * Fixed bug in tntapi-netconf-node.yang contradicting
     the description statement intent to have <nc:filter> node
+  * Added yangcli_ok_script multiple yangcli command lines batch
+  * Added example script validating network interconnect tester
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Tue, 11 Dec 2018 17:08:42 +0100
+ -- Vladimir Vassilev <vladimir@lightside-instruments.com>  Thu, 12 Dec 2019 16:09:13 +0100
 
 python-tntapi (1.5) stable; urgency=medium
 
