--- a/tntapi/debian/changelog
+++ b/tntapi/debian/changelog
@@ -1,5 +1,6 @@
 python-tntapi (1.6-0) UNRELEASED; urgency=medium
 
   * Unofficial release
+  * 
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Tue, 11 Dec 2018 17:10:29 +0100
+ -- Vladimir Vassilev <vladimir@lightside-instruments.com>  Thu, 12 Dec 2019 16:15:15 +0100
