--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+litenc (1.7) UNRELEASED; urgency=medium
+
+  * Transition to python3
+
+ -- Vladimir Vassilev <vladimir@lightside-instruments.com>  Tue, 06 Dec 2022 14:56:42 +0100
+
 python-litenc (1.4) UNRELEASED; urgency=medium
 
   * Fixed litenc_lxml 'module' object has no attribute 'strip_namespaces' error
