--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-python-litenc (1.4-0) UNRELEASED; urgency=medium
+litenc (1.7-0) UNRELEASED; urgency=medium
 
   * Unofficial release
+  * 
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Wed, 02 Jan 2019 17:48:03 +0100
+ -- Vladimir Vassilev <vladimir@lightside-instruments.com>  Tue, 06 Dec 2022 14:28:01 +0100
