--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
-litenc (1.7) UNRELEASED; urgency=medium
+litenc (1.7) stable; urgency=medium
 
   * Transition to python3
 
- -- Vladimir Vassilev <vladimir@lightside-instruments.com>  Tue, 06 Dec 2022 14:56:42 +0100
+ -- Vladimir Vassilev <vladimir@lightside-instruments.com>  Wed, 07 Dec 2022 16:08:08 +0100
 
 python-litenc (1.4) UNRELEASED; urgency=medium
 
